@@ -25,8 +25,10 @@ import com.tomkeuper.bedwars.api.arena.IArena;
 import com.tomkeuper.bedwars.api.arena.team.ITeam;
 import com.tomkeuper.bedwars.api.arena.team.ITeamAssigner;
 import com.tomkeuper.bedwars.api.events.gameplay.TeamAssignEvent;
+import com.tomkeuper.bedwars.arena.Arena;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
+import org.bukkit.scoreboard.Team;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -37,38 +39,55 @@ public class TeamAssigner implements ITeamAssigner {
 
     private final LinkedList<Player> skip = new LinkedList<>();
 
+    /**
+     * Assigns teams to players in the given arena.
+     *
+     * @param arena The arena to assign teams in.
+     */
     public void assignTeams(IArena arena) {
 
-        // team up parties first
+        // setup team up parties first
         if (arena.getPlayers().size() > arena.getMaxInTeam() && arena.getMaxInTeam() > 1) {
             LinkedList<List<Player>> teams = new LinkedList<>();
 
+            // get all parties
             List<Player> members;
             for (Player player : arena.getPlayers()) {
+                if (!BedWars.getParty().isOwner(player)) continue; //prevent processing 1 party multiple times
+
                 members = BedWars.getParty().getMembers(player);
                 if (members == null) continue;
                 members = new ArrayList<>(members);
+
                 if (members.isEmpty()) continue;
                 members.removeIf(member -> !arena.isPlayer(member));
                 if (members.isEmpty()) continue;
+
                 teams.add(members);
             }
-            // prioritize bigger teams
 
+            // prioritize bigger teams
             if (!teams.isEmpty()) {
                 for (ITeam team : arena.getTeams()) {
-                    // sort
-                    teams.sort(Comparator.comparingInt(List::size));
-                    if (teams.get(0).isEmpty()) break;
+                    teams.sort(Comparator.comparingInt(List::size)); // sort teams based on player amount.
+                    if (teams.isEmpty()) break;
+                    if (teams.getFirst().isEmpty()) break;
+
                     for (int i = 0; i < arena.getMaxInTeam() && team.getMembers().size() < arena.getMaxInTeam(); i++) {
+                        if (teams.isEmpty()) break;
                         if (teams.get(0).size() > i) {
-                            Player toAdd = teams.get(0).remove(0);
-                            TeamAssignEvent e = new TeamAssignEvent(toAdd, team, arena);
-                            Bukkit.getPluginManager().callEvent(e);
-                            if (!e.isCancelled()) {
-                                toAdd.closeInventory();
-                                team.addPlayers(toAdd);
-                                skip.add(toAdd);
+                            List<Player> players = teams.poll(); // get and remove the head of teams list
+                            for (Player toAdd : players) {
+                                if (team.getSize() >= arena.getMaxInTeam())
+                                    continue; //prevent bigger teams from joining the same team.
+
+                                TeamAssignEvent e = new TeamAssignEvent(toAdd, team, arena);
+                                Bukkit.getPluginManager().callEvent(e);
+                                if (!e.isCancelled()) {
+                                    toAdd.closeInventory();
+                                    team.addPlayers(toAdd);
+                                    skip.add(toAdd);
+                                }
                             }
                         } else {
                             break;
@@ -78,7 +97,28 @@ public class TeamAssigner implements ITeamAssigner {
             }
         }
 
-        for (Player remaining : arena.getPlayers()) {
+        // Party teams are already filled
+        List<Player> remainingPlayers = new ArrayList<>();
+        for (Player player : arena.getPlayers()) { // Make sure to only get players who are NOT in a team already
+            if (skip.contains(player)) continue;
+            remainingPlayers.add(player);
+        }
+        if (remainingPlayers == null) return;
+
+        for (Player player: remainingPlayers) {
+            player.closeInventory();
+            findTargetTeam(arena.getTeams(),arena.getMaxInTeam(),1).addPlayers(player);
+        }
+
+        // Fallback team assignment
+        BedWars.plugin.getLogger().warning("\n\nBackup Team assigner reached! Please report this on Discord!\nArenaSize: " + arena.getMaxPlayers() + " amount of teams: " + arena.getTeams().size() + " Arena: " + arena.getArenaName());
+        List<Player> remainingPlayersFallback = new ArrayList<>();
+        for (Player player : arena.getPlayers()) {
+            if (null == arena.getTeam(player)) remainingPlayersFallback.add(player);
+        }
+
+        for (Player remaining : remainingPlayersFallback) { //check if left over players need a team
+            BedWars.plugin.getLogger().warning("player: " + remaining.getDisplayName());
             if (skip.contains(remaining)) continue;
             for (ITeam team : arena.getTeams()) {
                 if (team.getMembers().size() < arena.getMaxInTeam()) {
@@ -93,4 +133,47 @@ public class TeamAssigner implements ITeamAssigner {
             }
         }
     }
+
+
+
+
+    /**
+     * Finds the target team to add a player based on the following criteria:
+     * - If there is a team with fewer players than the maximum allowed per team, and fewer than maxPlayersPerTeam - 1 players,
+     *   it returns that team.
+     * - If no such team is found, it returns the first team with available space (i.e., fewer players than maxPlayersPerTeam).
+     * - If no team with available space is found, it returns null (arena = full).
+     *
+     * @param teams             The list of teams to search for the target team.
+     * @param maxPlayersPerTeam The maximum number of players allowed per team.
+     * @param soloPlayerThreshold The threshold for the number of players in a team to be considered a solo player.
+     * @return The target team to add a player, or null if no suitable team is found.
+     */
+    private static ITeam findTargetTeam(List<ITeam> teams, int maxPlayersPerTeam, int soloPlayerThreshold) {
+        ITeam targetTeam = null;
+        int minPlayers = Integer.MAX_VALUE;
+
+        // Find a team with fewer players than maxPlayersPerTeam - 1
+        for (ITeam team : teams) {
+            int numPlayers = team.getSize();
+            if (numPlayers < minPlayers && numPlayers < maxPlayersPerTeam - 1) {
+                targetTeam = team;
+                minPlayers = numPlayers;
+            }
+        }
+
+        // If no such team is found, find the first team with available space
+        if (targetTeam == null || minPlayers >= soloPlayerThreshold) {
+            for (ITeam team : teams) {
+                if (team.getSize() < maxPlayersPerTeam) {
+                    targetTeam = team;
+                    break;
+                }
+            }
+        }
+
+        return targetTeam;
+    }
+
+
 }
